# btstack

./: CMakeLists.txt  crea.tag.bat  gcc.stm32f4xx.cmake  pul.bat
bluestudio_plugin/: Plugin.js  template.txt
gatt-write-demo/: gatt_client_demo.c  gatt_server_demo.c  gatt_server_demo.gatt
per_cmake/: btstack_config.h  utili.h
src/: CMakeLists.txt  bluetooth.h  btstack.h  btstack_crypto.c  btstack_debug.h  btstack_defines.h  btstack_memory.c  btstack_run_loop.c  btstack_util.c  gap.h  hci.c  hci.h  hci_dump.c  hci_transport_h4.c  hci_transport_h5.c  l2cap.c  l2cap.h
src/ble/: att_db.c  att_db.h  att_db_util.c  att_server.c  att_server.h  gatt_client.c  sm.c  sm.h
src/classic/: a2dp_sink.h  a2dp_source.h  avdtp.h  avdtp_acceptor.h  avdtp_initiator.h  avdtp_sink.h  avdtp_source.h  avdtp_util.h  avrcp.h  avrcp_browsing_controller.h  avrcp_controller.h  avrcp_target.h  bnep.c  btstack_sbc.h  btstack_sbc_plc.h  hfp.c  hfp_ag.c  hfp_ag.h  hfp_gsm_model.c  hfp_gsm_model.h  hfp_hf.c  hfp_hf.h  hsp_ag.c  hsp_ag.h  hsp_hs.c  hsp_hs.h  rfcomm.c  rfcomm.h  sdp_util.c
test/avrcp/: avrcp.h
tool/: compila.py  crea_cb.py
